# PyPEMA

./: .gitignore  README.md  pema_example.py  pypema_example.ipynb  pypema_example.py  pyproject.toml
data/: ecoli.mat  elementary_modes.npy  fluxes.npy
pema/: .directory  branching.py  calcfuncs.py  dataio.py  dataloader.py  plotfuncs.py  pypema.py
pypema/: __init__.py  branching.py  calcfuncs.py  pema.py  plots.py  utils.py
