[tool.poetry]
name = "pypema"
version = "0.1.0"
description = "Principal Elementary Mode Analysis Python implementation"
authors = ["Rodolfo Marques"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22"
scipy = "^1.6"
matplotlib = "^3.5.1"
progressbar = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
