[tool.poetry]
name = "pypema"
version = "1.1.0"
description = "Principal Elementary Mode Analysis for Python"
authors = ["Rodolfo Marques"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22"
matplotlib = "^3.5.1"
progressbar = "^2.5"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pypema = 'pypema:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
